test/files/pos/t0504.scala
package b {
  class B
}

package a.b {
  class A {
    val x = new _root_.b.B
  }
}
