test/files/neg/t3757/B.scala
package b

class B extends a.A {
  override def foo = "B"
}